--- a/index.css
+++ b/index.css
@@ -49,16 +49,19 @@ main {
 	flex-direction: column;
 	justify-content: center;
 	border-radius: 6px;
+	background: white;
+	background: linear-gradient(to right top, rgba(255,255,255,0.1), rgba(255,255,255, 0.1));
 }
 
 .tools {
-	color: white;
+	color: black;
 	padding: 25px;
 	height: 200px;
 	border: 5px solid #f2f2f2;
 	margin: 20px;
 	width: 75%;
 	border-radius: 4px;
+	border-color: linear-gradient(to right top, rgba(255,255,255,0.1), rgba(255,255,255, 0.1));
 }
 
 ul {
@@ -67,7 +70,13 @@ ul {
 }
 
 h2 {
-	color: #007bff;
+	color: black;
+	font-weight: bolder;
+}
+
+li {
+	font-size: 20px;
+	color: black;
 }
 
 html {
