--- a/index.css
+++ b/index.css
@@ -17,14 +17,26 @@ img {
 	border-radius: 50%;
 }
 
+main {
+	min-height: 100vh;
+	background: linear-gradient(to right top,#87adfe, #ff77cd);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 #landing {
-	height: 80vh;
+	height: 70vh;
 	/*center content vertically using flexbox*/
+	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-}
+	align-self: center;
+	background: white;
+	background: linear-gradient(to bottom, rgba(255,255,255,0.7), rgba(255,255,255, 0.2));
+	}
 
 .jumbotron {
 	background-color: transparent;
